@@ -1,6 +1,8 @@
 package br.com.daciosoftware.loteriasdms.confiraseujogo;
 
-import br.com.daciosoftware.loteriasdms.dao.Sorteio;
+import android.support.annotation.NonNull;
+
+import br.com.daciosoftware.loteriasdms.pojo.Sorteio;
 
 /**
  * Created by Dácio Braga on 01/08/2016.
@@ -38,7 +40,7 @@ public class SorteioAcerto implements Comparable<SorteioAcerto>{
     }
 
     @Override
-    public int compareTo(SorteioAcerto another) {
-        return new Integer(qtdeAcertos).compareTo(another.getQtdeAcertos());
+    public int compareTo(@NonNull SorteioAcerto another) {
+        return Integer.valueOf(qtdeAcertos).compareTo(another.getQtdeAcertos());
     }
 }
